lista de entidades fixed